candidates controller
