# backend/index.js
@@ -6,7 +6,7 @@ const cors = require("cors");
 
 // import routes
 const authRoutes = require("./routes/auth.routes");
-const postsRoutes = require("./routes/posts.routes");
+const candidatesRoutes = require("./routes/candidates.routes");
 
 //Error Handler middleware
 const ErrorHandler = require("./middleware/error");
@@ -25,7 +25,7 @@ app.get("/", (req, res) => {
 });
 
 app.use("/api/v1/auth", authRoutes);
-app.use("/api/v1/posts", postsRoutes);
+app.use("/api/v1/candidates", candidatesRoutes);
 
 app.use(ErrorHandler);
 
